# bs

./: .gitignore  Cargo.toml  Dockerfile.base  Dockerfile.ci  Dockerfile.ci-macos  Dockerfile.vscode  README.md  makefile  rustfmt.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
bs/: Cargo.toml
bs/src/: config.rs  lib.rs
bs/src/environment/: mod.rs
bs/src/environment/container/: docker.rs  mod.rs
bs/src/environment/remote/: mod.rs  ssh.rs
bs/src/processing/: config.rs  mod.rs
bs/src/processing/impls/: cli_ssh.rs  mod.rs
bs/src/storage/: config.rs  mod.rs
bs/src/storage/impls/: cli_rsync.rs  mod.rs
bs/src/utils/: command.rs
bs_cli/: Cargo.toml
bs_cli/src/: main.rs  opts.rs
distrunner/: Cargo.toml
distrunner/src/: lib.rs
distrunner/src/environment/: mod.rs
distrunner/src/process/: mod.rs
distrunner/src/storage/: mod.rs
distrunner_cli/: Cargo.toml
distrunner_cli/src/: conf.rs  main.rs  opts.rs
integration_tests/: .env.example  lib.sh  run_macos_to_linux.sh
its/: .env.example  lib.sh  run.sh
its/projects/generic/: Dockerfile.LocalDocker  distrunner.json  makefile
its/projects/local/: distrunner  distrunner.json  makefile  proc1.sh
