[package]
name = "distrunner_cli"
version = "0.1.0"
authors = ["nmio <kristo.koert@gmail.com>"]
edition = "2018"

[dependencies]
clap = "~3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.2.0", features = ["full"] }
distrunner = { path = "../distrunner" }

[[bin]]
path = "src/main.rs"
name = "distrunner"
